--- a/theme_switcher.html
+++ b/theme_switcher.html
@@ -26,7 +26,8 @@
       </div>
     </div>
 
-    <script src="/theme_swicher/script.js">
+ <script src="script.js"></script>
+
      
     </script>
   </body>
